# bldcmd

./: .gitignore  App.xaml  App.xaml.cs  CMakeLists.txt  README.md  binDotnet.csproj  binDotnet.sln  devNote.txt  main.cpp  test.cpp  test.h  test.ui
blnCls/blind/: Chrmve.cs  Game.cs  GameCgControl.cs  GameMenu.cs  MainGame.cs
blnCls/blind/charac/: Character.cs  ICharacProxy.cs
blnCls/blind/observe/: CgObserver.cs  CmdOvserver.cs  obserEvnt.cs
blnCls/cmdman/: CmdManFact.cs  CmdManage.cs
blnCls/cmdman/impl/: LevelCmd.cs  MainCmd.cs
blnCls/constVle/text/: constText.cs
blnCls/constVle/typeSign/: GameStatus.cs  docuType.cs
blnCls/level/: Level.cs  LevelFact.cs
blnCls/level/docu/: Document.cs
blnCls/util/: Pair.cs
include/comnd-reac/: command_react.h
include/comnd-reac/impl/: exit.h  start.h
include/mainwindow/: mainwindow.h
include/uicomp/cmdwind/: cmdwind.h  cmdwindcls.h
include/uicomp/exhibwind/: exhibcls.h  exhibwind.h
include/uicomp/mainwindow/: mainwindow.h
lib/bld/include/: BldcmdBaseVisitor.h  BldcmdLexer.h  BldcmdParser.h  BldcmdVisitor.h  commndAna.h
lib/bld/include/comand-gram/: comd.h
lib/bld/include/comnd-comp/: Command.h
src/comnd-reac/: command_react.cpp
src/mainwindow/: mainwindow.cpp  mainwindowutils.cpp
src/uicomp/cmdwind/: cmdoper.cpp  cmdwind.cpp  cmdwinddraw.cpp  cmdwindupdt.cpp
src/uicomp/exhibwind/: exhibwind.cpp
src/uicomp/mainwindow/: mainwindow.cpp  mainwindowutils.cpp
ui/cgWind/: CgWind.xaml  CgWind.xaml.cs  cgWindEvent.cs
ui/cmdWind/: CmdWind.xaml  CmdWind.xaml.cs  cmdWindEvnt.cs
